tech, form, footer

--- a/src/Components/BetweenTitle/BetweenTitle.module.scss
+++ b/src/Components/BetweenTitle/BetweenTitle.module.scss
@@ -4,5 +4,7 @@
     font-family: 'Poppins', sans-serif;
     text-align: center;
     font-size: 65px;
-    line-height: 100px;
+    line-height: 90px;
+    max-width: 75%;
+    margin: 0 auto;
 }
