--- a/src/pages/Main/Main.module.scss
+++ b/src/pages/Main/Main.module.scss
@@ -46,13 +46,13 @@
             line-height: 1.2;
             color: rgba(255, 255, 255, 0.8);
             text-align: center;
-            width: 75%;
+            width: 80%;
             margin: 0 auto;
             margin-bottom: 2rem;
         }
         .weDo{
             background-color: white;
-            width: 75%;
+            width: 80%;
             margin: 0 auto;
             padding: 3rem 0;
             .weDoBlock{
@@ -69,6 +69,49 @@
                         text-align: center;
                         font-family: 'Poppins', sans-serif;
                         font-weight: 500;
+                    }
+                }
+            }
+        }
+    }
+    .tech{
+        background-color: black;
+        padding-top: 15vh;
+        width: 100%;
+        position: relative;
+        padding-bottom: 60vh;
+        ul{
+            width: 52vw;
+            position: relative;
+            margin-left: 50%;
+            transform: translateX(-50%);
+            display: flex;
+            align-items: center;
+            li{
+                display: flex;
+                margin: 0 30px;
+                color: rgba(255, 255, 255, 0.5);
+                font-family: 'Poppins', sans-serif;
+                font-size: 15px;
+                align-items: center;
+                .checkbox{
+                    display: inline-block;
+                    position: relative;
+                    width: 20px;
+                    height: 20px;
+                    background-color: #281D1D;
+                    border-radius: 3px;
+                    margin-right: 10px;
+                    cursor: pointer;
+                    .checkCircle{
+                        position: absolute;
+                        left: 50%;
+                        top: 50%;
+                        transform: translate(-50%, -50%);
+                        width: 8px;
+                        height: 8px;
+                        border-radius: 8px;
+                        background: #C4C4C4;
                     }
                 }
             }
