--- a/src/Components/Process/Process.module.scss
+++ b/src/Components/Process/Process.module.scss
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
 .root{
     position: relative;
     background-color: white;
@@ -28,13 +26,11 @@
                 width: 90%;
             }
             h1{
-                font-family: 'Poppins', sans-serif;
                 font-size: 27px;
                 color: black;
                 margin-bottom: 1rem;
             }
             p{
-                font-family: 'Poppins', sans-serif;
                 color: rgba(0, 0, 0, 0.8);
                 font-size: 15px;
                 width: 80%;
@@ -48,6 +44,7 @@
 .metrics{
     background-color: white;
     padding-top: 10vh;
+    padding-bottom: 5vh;
     position: relative;
     .inlineMetrics{
         width: 75%;
@@ -74,13 +71,11 @@
                 left: 50%;
                 transform: translateX(-50%);
                 color: black;
-                font-family: 'Poppins', sans-serif;
             }
             p{
                 font-size: 20px;
                 color: rgba(0, 0, 0, 0.9);
                 font-weight: bold;
-                font-family: 'Poppins', sans-serif;
             }
         }
     }
