backend, videoedit, casespage, design routes

--- a/src/Components/Benefits/Benefits.module.scss
+++ b/src/Components/Benefits/Benefits.module.scss
@@ -2,10 +2,12 @@
     background-color: white;
     padding: 8vh 0;
     position: relative;
+    margin: 1rem 0;
     .title{
         width: 30%;
         position: relative;
         display: block;
+        width: 100%;
     }
     .benefits{
         width: 80%;
