--- a/src/Components/StackBlock/StackBlock.module.scss
+++ b/src/Components/StackBlock/StackBlock.module.scss
@@ -1,6 +1,7 @@
 .root{
     position: relative;
-    padding-top: 15vh;
+    // padding-top: 12vh;
+    padding-bottom: 6vh;
     .stack{
         position: relative;
         width: 70%;
