--- a/src/Components/LongCase/LongCase.module.scss
+++ b/src/Components/LongCase/LongCase.module.scss
@@ -1,36 +1,13 @@
-.casesContent{
-    position: relative;
-    width: 75%;
+.caseBlock{
+    width: 80%;
     margin: 0 auto;
+    position: relative;
+    padding-top: 3vh;
     .longCase{
         width: 100%;
         height: 500px;
-        background: url("./img/case1.jpg") center / cover no-repeat;
         position: relative;
         margin: 25px 0;
-    }
-    .inlineCasesBlock{
-        display: flex;
-        width: 100%;
-        position: relative;
-        justify-content: space-between;
-        .biggerCase,
-        .smallerCase{
-            height: 500px;
-            position: relative;
-        }
-        .biggerCase{
-            width: 63%;
-            background: url('./img/case2.jpg') center / cover;
-        }
-        .smallerCase{
-            width: 35%;
-            background: url('./img/case3.jpg') center / cover;
-        }
-    }
-    .longCase,
-    .inlineCasesBlock .biggerCase,
-    .inlineCasesBlock .smallerCase{
         .logo{
             position: absolute;
             left: 4%;
@@ -49,7 +26,7 @@
                 color: white;
                 transition: 0.3s;
                 bottom: 3%;
-                line-height: 1.1;
+
             }
             .popUpSpan{
                 position: relative;
@@ -60,8 +37,6 @@
                     opacity: 0;
                     pointer-events: none;
                     transition: 0.5s;
-                    font-weight: 600;
-                    line-height: 1;
                 }
                 .exploreBtn{
                     padding: 8px 14px;
