--- a/src/Components/Nav/Nav.module.scss
+++ b/src/Components/Nav/Nav.module.scss
@@ -33,7 +33,7 @@
                     margin: 0 15px;
                     .link{
                         color: white;
-                        font-size: 15px;
+                        font-size: 13px;
                         font-weight: 500;
                         transition: .3s;
                         &:hover{
@@ -47,9 +47,10 @@
                     position: relative;
                     .servicesBtn{
                         color: white;
+                        margin-top: 5%;
                         display: flex;
                         align-items: center;
-                        font-size: 15px;
+                        font-size: 13px;
                         font-weight: 500;
                         border: none;
                         outline: none;
@@ -127,7 +128,7 @@
                         a{
                             position: relative;
                             color: white;
-                            font-size: 14px;
+                            font-size: 13px;
                             cursor: pointer;
                             &::before{
                                 position: absolute;
@@ -163,7 +164,7 @@
             .number{
                 color: white;
                 font-weight: 500;
-                font-size: 15px;
+                font-size: 13px;
             }
             .btnDiv{
                 .contactBtn{
@@ -171,7 +172,7 @@
                     outline: none;
                     color: rgba(236, 28, 36, 1);
                     transition: .3s;
-                    padding: 10px 32px;
+                    padding: 7px 27px;
                     background: none;
                     cursor: pointer;
                     margin-left: 2rem;
