--- a/src/Components/Title/Title.module.scss
+++ b/src/Components/Title/Title.module.scss
@@ -5,8 +5,7 @@
     padding-top: 3rem;
     .text1,
     .text2,
-    .text3,
-    .littleText{
+    .text3{
         color: white;
         position: relative;
         z-index: 5;
@@ -29,8 +28,10 @@
         margin-bottom: 1rem;
     }
     .littleText{
-        font-size: 32px;
+        font-size: 24px;
         line-height: 32px;
+        color: rgba(255, 255, 255, 0.8);
+        z-index: 5;
     }
 
     .rhombus{
