--- a/src/pages/Backend/Backend.module.scss
+++ b/src/pages/Backend/Backend.module.scss
@@ -1,19 +1,19 @@
 .root{
     .header{
+        position: relative;
         width: 100%;
         height: 100vh;
-        position: relative;
         padding-top: 20vh;
     }
     .stacks{
-        background-color: black;
-        padding: 10vh 0;
+        position: relative;
+        padding-bottom: 5vh;
+        width: 100%;
     }
     .case{
-        padding: 5vh 0;
-        padding-bottom: 10rem;
         position: relative;
         width: 100%;
-        background-color: black;
+        padding-top: 10vh;
+        padding-bottom: 10rem;
     }
 }
