--- a/src/Components/Cases/Cases.module.scss
+++ b/src/Components/Cases/Cases.module.scss
@@ -89,3 +89,16 @@
         }
     }
 }
+
+
+@media screen and (max-width: 1400px){
+    .casesContent{
+        width: 85%;
+    }
+}
+
+@media screen and (max-width: 837px){
+    .casesContent{
+        width: 90%;
+    }
+}
