--- a/src/pages/Main/Main.module.scss
+++ b/src/pages/Main/Main.module.scss
@@ -6,3 +6,15 @@
         padding-top: 8vh;
     }
 }
+
+@media screen and (max-width: 540px){
+    .root .cases{
+        padding-bottom: 5rem;
+    }
+}
+
+@media screen and (max-width: 450px){
+    .root .cases{
+        padding-bottom: 4rem;
+    }
+}
