--- a/src/Components/BetweenTitle/BetweenTitle.module.scss
+++ b/src/Components/BetweenTitle/BetweenTitle.module.scss
@@ -6,3 +6,33 @@
     margin: 0 auto;
     font-weight: 700 !important;
 }
+
+@media screen and (max-width: 1000px){
+    .root{
+        font-size: 50px;
+        line-height: 70px;
+        max-width: 90%;
+    }
+}
+
+@media screen and (max-width: 700px){
+    .root{
+        font-size: 40px;
+        font-weight: 600;
+        line-height: 60px;
+    }
+}
+
+@media screen and (max-width: 564px){
+    .root{
+        font-size: 28px;
+        line-height: 45px;
+    }
+}
+
+@media screen and (max-width: 350px){
+    .root{
+        font-size: 23px;
+        line-height: 43px;
+    }
+}
