--- a/src/Components/LongBtn/LongBtn.module.scss
+++ b/src/Components/LongBtn/LongBtn.module.scss
@@ -18,3 +18,34 @@
         color: white;
     }
 }
+
+@media screen and (max-width: 1000px){
+    .root{
+        width: 85%;
+        border: 1px solid #EC1C24;
+        font-size: 16px;
+        padding: 10px 0;
+        bottom: 2rem;
+    }
+}
+
+@media screen and (max-width: 837px){
+    .root{
+        width: 90%;
+    }
+}
+
+@media screen and (max-width: 837px){
+    .root{
+        width: 90%;
+        font-size: 14px;
+    }
+}
+
+@media screen and (max-width: 454px){
+    .root{
+        font-size: 12px;
+        padding: 8px 0;
+        bottom: 1.25rem;
+    }
+}
