--- a/src/Components/LongCase/LongCase.module.scss
+++ b/src/Components/LongCase/LongCase.module.scss
@@ -1,5 +1,5 @@
 .caseBlock{
-    width: 80%;
+    width: 100%;
     margin: 0 auto;
     position: relative;
     padding-top: 3vh;
@@ -17,26 +17,26 @@
             position: absolute;
             bottom: 4%;
             left: 4%;
-            transition: 0.5s;
+            transition: 0.75s;
             h1{
                 position: absolute;
                 font-size: 30px;
                 font-weight: 600;
                 padding-bottom: 1rem;
                 color: white;
-                transition: 0.3s;
+                transition: 0.75s;
                 bottom: 3%;
 
             }
             .popUpSpan{
                 position: relative;
-                transition: 0.5s;
+                transition: 0.75s;
                 p{
                     color: rgba(255, 255, 255, 0.7);
                     font-size: 18px;
                     opacity: 0;
                     pointer-events: none;
-                    transition: 0.5s;
+                    transition: 0.75s;
                 }
                 .exploreBtn{
                     padding: 8px 14px;
@@ -49,7 +49,7 @@
                     font-weight: 500;
                     opacity: 0;
                     pointer-events: none;
-                    transition: 0.5s;
+                    transition: 0.75s;
                     margin: 8px auto;
                 }
             }
@@ -61,6 +61,92 @@
         }
         &:hover > .bottomInfo h1{
             transform: translateY(-5rem);
+        }
+    }
+}
+
+@media screen and (max-width: 925px){
+    .caseBlock{
+        padding-top: 0;
+        .longCase{
+            height: 400px;
+            .bottomInfo{
+                h1{
+                    padding-bottom: 0;
+                    font-size: 26px;
+                }
+                .popUpSpan{
+                    p{
+                        font-size: 16px;
+                    }
+                    .exploreBtn{
+                        padding: 7px 13px;
+                        font-size: 15px;
+                    }
+                }
+            }
+        }
+    }
+}
+@media screen and (max-width: 650px){
+    .caseBlock{
+        padding-top: 0;
+        .longCase{
+            height: 370px;
+            .bottomInfo{
+                h1{
+                    padding-bottom: 0;
+                    font-size: 24px;
+                }
+                .popUpSpan{
+                    p{
+                        font-size: 14px;
+                    }
+                    .exploreBtn{
+                        padding: 6px 12px;
+                        font-size: 13px;
+                    }
+                }
+            }
+            .logo{
+                width: 100px;
+            }
+        }
+    }
+}
+@media screen and (max-width: 540px){
+    .caseBlock{
+        .longCase{
+            height: 340px;
+            .bottomInfo{
+                h1{
+                    font-size: 21px;
+                }
+                .popUpSpan{
+                    p{
+                        font-size: 12px;
+                    }
+                    .exploreBtn{
+                        padding: 5px 11px;
+                        font-size: 11px;
+                    }
+                }
+            }
+            .logo{
+                width: 90px;
+            }
+        }
+    }
+}
+@media screen and (max-width: 540px){
+    .caseBlock{
+        .longCase{
+            height: 300px;
+            .bottomInfo{
+                h1{
+                    font-size: 20px;
+                }
+            }
         }
     }
 }
