--- a/src/Components/Tech/Tech.module.scss
+++ b/src/Components/Tech/Tech.module.scss
@@ -54,44 +54,41 @@
         margin: 0 auto;
         display: grid;
         grid-template-columns: repeat(14, 1fr);
-        grid-template-rows: repeat(6, 11vh);
+        grid-template-rows: repeat(6, 12vh);
         grid-gap: 1px;
-        .design{
-            background: #281D1D !important;
+        .design, .edit, .video, .frontend, .front, .backend, .marketing{
+            position: relative;
             display: flex;
             justify-content: center;
             align-items: center;
+            flex-direction: column;
             transition: 0.5s;
+            p{
+                font-size: 10px;
+                color: rgba(255, 255, 255, 0.35);
+                padding-top: 10px;
+            }
+        }
+        .design{
+            background: #281D1D !important;
         }
         .edit{
             background: #3D1C1C;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            transition: 0.5s;
         }
         .video{
             background: #3D1111;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            transition: 0.5s;
         }
         .frontend{
             background: #22281D;
-            transition: 0.5s;
         }
         .front{
             background: #263D24;
-            transition: 0.5s;
         }
         .backend{
             background: #0D303A;
-            transition: 0.5s;
         }
         .marketing{
             background: #4B0249;
-            transition: 0.5s;
         }
 
         // seperated
@@ -141,6 +138,204 @@
 
         #backend10, #backend11, #backend12{
             grid-row: 6 / 7;
+        }
+    }
+}
+
+@media screen and (max-width: 1400px){
+    .tech{
+        ul{
+            width: 85%;
+        }
+        .grid{
+            width: 85%;
+            .design, .edit, .video, .frontend, .front, .backend, .marketing{
+                padding-top: 5px;
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 1200px){
+    .tech{
+        ul{
+            li{
+                .checkbox{
+                    margin-right: 3px;
+                }
+            }
+        }
+        .grid{
+            .design, .edit, .video, .frontend, .front, .backend, .marketing{
+                position: relative;
+                img{
+                    width: 50%;
+                }
+                .specialImg{
+                    width: 30%;
+                }
+                p{
+                    padding-top: 0;
+                }
+            }
+        }
+    }
+}
+@media screen and (max-width: 1060px){
+    .tech{
+        .grid{
+            .design, .edit, .video, .frontend, .front, .backend, .marketing{
+                p{
+                    font-size: 8px;
+                }
+            }
+        }
+    }
+}
+@media screen and (max-width: 1032px){
+    .tech{
+        ul{
+            li{
+                font-size: 14px;
+                .checkbox{
+                    width: 18px;
+                    height: 18px;
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 923px){
+    .tech{
+        ul{
+            padding-top: 2vh;
+            li{
+                font-size: 13px;
+                .checkbox{
+                    width: 16px;
+                    height: 16px;
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 888px){
+    .tech{
+        ul{
+            flex-wrap: wrap;
+            display: block;
+            text-align: center;
+            li{
+                display: inline-block;
+                margin: 5px 10px;
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 850px){
+    .tech{
+        .grid{
+            grid-template-columns: repeat(11, 1fr);
+            .video{
+                display: none;
+            }
+            #backend10{
+                grid-row: 4 / 5;
+            }
+            #backend11, #backend12{
+                display: none;
+            }
+        }
+    }
+}
+@media screen and (max-width: 680px){
+    .tech{
+        .grid{
+            .design, .edit, .video, .frontend, .front, .backend, .marketing{
+                p{
+                    font-size: 6px;
+                }
+            }
+        }
+    }
+}
+@media screen and (max-width: 566px){
+    .tech{
+        ul{
+            width: 90%;
+        }
+    }
+}
+
+@media screen and (max-width: 510px){
+    .tech{
+        .grid{
+            grid-template-columns: repeat(6, 1fr);
+            grid-template-rows: repeat(10, 12vh);
+            .video{
+                display: none;
+            }
+            #edit1, #edit2, #edit3, #edit4, #edit5, #edit6{
+                grid-row: 1 / 2;
+            }
+            #edit7, #edit8, #edit9, #edit10, #edit11, #edit12{
+                grid-row: 2 / 3;
+            }
+            #marketing1, #marketing2, #marketing3, #marketing4{
+                grid-row: 9 / 10;
+            }
+            #marketing5, #marketing6, #marketing7, #marketing8, #marketing9, #marketing10{
+                grid-row: 10 / 11;
+            }
+            #front1, #front2, #front3, #front4, #front5, #front6{
+                grid-row: 8 / 9;
+            }
+            #front7, #front8{
+                grid-row: 9 / 10;
+            }
+            #front9, #front10, #front11, #front12{
+                display: none;
+            }
+            #edit1, #edit2, #edit3, #edit4, #edit5, #edit6{
+                grid-row: 7 / 8;
+            }
+            #edit7, #edit8, #edit9{
+                grid-row: 6 / 7;
+            }
+            #edit10, #edit11, #edit12{
+                display: none;
+            }
+            #backend1, #backend2{
+                grid-row: 4 / 5;
+            }
+            #backend3, #backend4, #backend5, #backend6, #backend7, #backend8{
+                grid-row: 5 / 6;
+            }
+            #backend9, #backend10, #backend11{
+                grid-row: 6 / 7;
+                display: flex;
+            }
+            #backend9{
+                grid-column: 1 / 2;
+            }
+            #backend10{
+                grid-column: 2 / 3;
+            }
+            #backend11{
+                grid-column: 3 / 4;
+            }
+            #fronend1, #fronend2, #fronend3, #fronend4, #fronend5, #fronend6{
+                grid-row: 3 / 4;
+            }
+            #fronend7, #fronend8, #fronend9, #fronend10{
+                grid-row: 4 / 5;
+            }
+            #frontend11, #frontend12{
+                display: none;
+            }
         }
     }
 }
