--- a/src/Components/WhoWeAre/WhoWeAre.module.scss
+++ b/src/Components/WhoWeAre/WhoWeAre.module.scss
@@ -118,6 +118,12 @@
 }
 @media screen and (max-width: 540px){
     .who{
+        .whoWeAre{
+            font-size: 50px;
+        }
+        .ourMissionIs{
+            font-size: 20px;
+        }
         .weDo{
             .weDoBlock{
                 div{
@@ -132,6 +138,12 @@
 
 @media screen and (max-width: 444px){
     .who{
+        .whoWeAre{
+            font-size: 40px;
+        }
+        .ourMissionIs{
+            font-size: 18px;
+        }
         .weDo{
             .weDoBlock{
                 div{
