--- a/src/Components/SingleReview/SingleReview.module.scss
+++ b/src/Components/SingleReview/SingleReview.module.scss
@@ -33,3 +33,21 @@
         font-size: 14px;
     }
 }
+
+@media screen and (max-width: 1030px){
+    .root{
+        .title{
+            h1{
+                margin: 7px 0;
+                font-size: 22px;
+            }
+        }
+        p{
+            font-size: 13px;
+        }
+    }
+}
+
+@media screen and (max-width: 600px){
+    
+}
