--- a/src/Components/Benefits/Benefits.module.scss
+++ b/src/Components/Benefits/Benefits.module.scss
@@ -17,3 +17,27 @@
         justify-content: space-between;
     }
 }
+
+@media screen and (max-width: 1400px){
+    .root{
+        .benefits{
+            width: 85%;
+        }
+    }
+}
+
+@media screen and (max-width: 837px) {
+    .root{
+        .benefits{
+            width: 90%;
+        }
+    }
+}
+
+@media screen and (max-width: 500px){
+    .root{
+        .benefits{
+            justify-content: center;
+        }
+    }
+}
