--- a/src/pages/Prices/Prices.module.scss
+++ b/src/pages/Prices/Prices.module.scss
@@ -5,4 +5,22 @@
         position: relative;
         padding-top: 20vh;
     }
+    .prices{
+        position: relative;
+        .currentSlides{
+            color: white;
+            width: 100%;
+            text-align: center;
+            position: absolute;
+            bottom: 2%;
+        }
+    }
+}
+
+@media screen and (max-width: 768px){
+    .root{
+        .prices{
+            margin: 8vh 0;
+        }
+    }
 }
