--- a/src/Components/Process/Process.module.scss
+++ b/src/Components/Process/Process.module.scss
@@ -53,6 +53,11 @@
     padding-top: 10vh;
     padding-bottom: 5vh;
     position: relative;
+
+
+    display: none;
+
+    
     .inlineMetrics{
         width: 80%;
         margin: 0 auto;
