--- a/src/Components/Nav/Nav.module.scss
+++ b/src/Components/Nav/Nav.module.scss
@@ -5,6 +5,7 @@
     left: 0;
     z-index: 10;
     .nav{
+        position: relative;
         width: 100%;
         display: flex;
         justify-content: space-between;
@@ -186,6 +187,9 @@
                 }
             }
         }
+        .burgerBtn{
+            display: none;
+        }
     }
     #navBig{
         height: 250px;
@@ -248,6 +252,73 @@
                             font-size: 13px;
                         }
                     }
+                }
+            }
+        }
+    }
+}
+@media screen and (max-width: 940px){
+    .root{
+        .nav{
+            .navLeft{
+                padding-left: 2rem;
+                ul{
+                    li{
+                        margin: 0 8px;
+                    }
+                }
+            }
+            .navRight{
+                padding-right: 2rem;
+                width: 45%;
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 820px){
+    .root{
+        position: fixed;
+        left: 0;
+        top: 0;
+        .nav{
+            padding-top: 1rem;
+            position: relative;
+            .navLeft,
+            .navRight{
+                display: none;
+            }
+            .title{
+                color: white;
+                padding-left: 5%;
+                font-size: 40px;
+            }
+            .burgerBtn{
+                height: fit-content;
+                display: flex;
+                flex-direction: column;
+                align-items: flex-end;
+                background: none;
+                border: none;
+                outline: none;
+                position: absolute;
+                right: 5%;
+                top: 2rem;
+                .bar{
+                    background-color: white;
+                    height: 4px;
+                    margin-bottom: 7px;
+                    box-shadow: 2px 2px 5px rgba(20, 20, 20, 0.7);
+                }
+                #bar1{
+                    width: 40px;
+                }
+                #bar2{
+                    width: 27px;
+                }
+                #bar3{
+                    width: 35px;
+                    margin-bottom: 0;
                 }
             }
         }
