fixed responsive bugs

--- a/src/Components/Burger/Burger.module.scss
+++ b/src/Components/Burger/Burger.module.scss
@@ -134,6 +134,12 @@
         margin-top: 2rem;
         margin-left: 50%;
         transform: translateX(-50%);
+        cursor: pointer;
+        transition: 0.3s;
+        &:hover{
+            background: #EC1C24;
+            color: white;
+        }
     }
     .lang{
         position: relative;
