--- a/src/Components/Burger/Burger.module.scss
+++ b/src/Components/Burger/Burger.module.scss
@@ -118,6 +118,10 @@
                     }
                 }
             }
+            .anotherLink{
+                position: relative;
+                z-index: 150;
+            }
         }
     }
     .orderBtn{
