fixing markup bugs

--- a/src/Components/Header/Header.module.scss
+++ b/src/Components/Header/Header.module.scss
@@ -97,6 +97,7 @@
 @media screen and (max-width: 454px){
     .header{
         overflow-x: hidden;
+        height: 80vh;
         .bottomText{
             display: none;
         }
