--- a/src/Components/LongBtn/LongBtn.module.scss
+++ b/src/Components/LongBtn/LongBtn.module.scss
@@ -25,12 +25,14 @@
         font-size: 16px;
         padding: 10px 0;
         bottom: 2rem;
+        margin-left: 7.5%;
     }
 }
 
 @media screen and (max-width: 837px){
     .root{
         width: 90%;
+        margin-left: 5%;
     }
 }
 
