responsiveness bugs fixed

--- a/src/Components/Burger/Burger.module.scss
+++ b/src/Components/Burger/Burger.module.scss
@@ -23,6 +23,7 @@
             color: white;
             font-size: 30px;
             font-weight: bold;
+            text-shadow: 2px 2px 5px rgba(35, 35, 35, 0.7) !important;
         }
         button{
             background: none;
