--- a/src/Components/Nav/Nav.module.scss
+++ b/src/Components/Nav/Nav.module.scss
@@ -25,6 +25,7 @@
                 font-weight: 700;
                 line-height: 60px;
                 margin-right: 2rem;
+                text-shadow: 2px 2px 5px rgba(35, 35, 35, 0.7);
             }
             ul{
                 display: flex;
