--- a/src/Components/Header/Header.module.scss
+++ b/src/Components/Header/Header.module.scss
@@ -71,7 +71,14 @@
         }
     }
 }
-
+@media screen and (max-width: 700px) and (max-height: 600px){
+    .header{
+        height: 100vh;
+        .bottomText{
+            margin-bottom: 10vh;
+        }
+    }
+}
 @media screen and (max-width: 613px){
     .header{
         .bottomText{
