--- a/src/Components/Tech/Tech.module.scss
+++ b/src/Components/Tech/Tech.module.scss
@@ -67,6 +67,7 @@
                 font-size: 10px;
                 color: rgba(255, 255, 255, 0.35);
                 padding-top: 10px;
+                text-align: center;
             }
         }
         .design{
@@ -258,6 +259,43 @@
                     font-size: 9px;
                 }
             }
+        }
+    }
+}
+@media screen and (max-width: 680px) and (max-height: 430px){
+    .tech{
+        .grid{
+            .design, .edit, .video, .frontend, .front, .backend, .marketing{
+                p{
+                    line-height: 1;
+                    font-weight: 300;
+                }
+            }
+        }
+    }
+}
+@media screen and (max-width: 590px) and (max-height: 400px){
+    .tech{
+        .grid{
+            .design, .edit, .video, .frontend, .front, .backend, .marketing{
+                p{
+                    font-size: 8px;
+                }
+            }
+        }
+    }
+}
+@media screen and (max-width: 590px) and (max-height: 350px){
+    .tech{
+        .grid{
+            grid-template-rows: repeat(6, 14vh);
+        }
+    }
+}
+@media screen and (max-width: 590px) and (max-height: 300px){
+    .tech{
+        .grid{
+            grid-template-rows: repeat(6, 15vh);
         }
     }
 }
