--- a/src/Components/Title/Title.module.scss
+++ b/src/Components/Title/Title.module.scss
@@ -132,6 +132,14 @@
     }
 }
 
+@media screen and (max-width: 700px) and (max-height: 600px){
+    .root{
+        .text3{
+            margin-bottom: 0;
+        }
+    }
+}
+
 @media screen and (max-width: 628px){
     .root{
         .text1,
