--- a/src/Components/Nav/Nav.module.scss
+++ b/src/Components/Nav/Nav.module.scss
@@ -308,6 +308,7 @@
                 color: white;
                 padding-left: 5%;
                 font-size: 40px;
+                text-shadow: 2px 2px 6px rgba(35, 35, 35, 0.7);
             }
             .burgerBtn{
                 height: fit-content;
