--- a/src/Components/Header/Header.module.scss
+++ b/src/Components/Header/Header.module.scss
@@ -73,10 +73,14 @@
 }
 @media screen and (max-width: 700px) and (max-height: 600px){
     .header{
-        height: 100vh;
         .bottomText{
             margin-bottom: 10vh;
         }
+    }
+}
+@media screen and (max-height: 400px){
+    .header{
+        height: 120vh;
     }
 }
 @media screen and (max-width: 613px){
