--- a/src/Components/Nav/Nav.module.scss
+++ b/src/Components/Nav/Nav.module.scss
@@ -341,3 +341,14 @@
         }
     }
 }
+
+@media screen and (max-height: 450px){
+    .root{
+        .nav{
+            padding-top: 0.4rem;
+            .burgerBtn{
+                top: 1.4rem;
+            }
+        }
+    }
+}
