--- a/src/Components/Reviews/Reviews.module.scss
+++ b/src/Components/Reviews/Reviews.module.scss
@@ -38,6 +38,7 @@
         }
     }
     .swiper{
+        position: relative;
         width: 80% !important;
         margin: 0 auto;
         padding-top: 3vh;
@@ -46,10 +47,12 @@
         align-items: center;
         .swiperSlide{
             display: flex;
+            height: 100%;
             justify-content: space-evenly;
             align-items: center;
             .inlineSlide{
                 width: 45%;
+                height: 100%;
                 display: flex;
                 flex-direction: column;
                 align-items: center;
@@ -92,10 +95,17 @@
         }
     }
 }
-
+@media screen and (max-width: 768px){
+    .root{
+        .swiper{
+            padding-bottom: 2rem;
+        }
+    }
+}
 @media screen and (max-width: 600px){
     .root{
         .swiper{
+            padding-bottom: 0;
             .swiperSlide{
                 padding-bottom: 2rem;
                 .inlineSlide{
@@ -108,7 +118,7 @@
             width: 100%;
             text-align: center;
             position: absolute;
-            bottom: 2%;
+            bottom: 0.5%;
         }
     }
 }
