--- a/src/pages/CasesPage/CasesPage.module.scss
+++ b/src/pages/CasesPage/CasesPage.module.scss
@@ -6,3 +6,34 @@
         padding-top: 20vh;
     }
 }
+
+@media screen and (max-height: 370px){
+    .root{
+        .cases{
+            padding-top: 1rem;
+        }
+    }
+}
+@media screen and (max-height: 330px){
+    .root{
+        .cases{
+            padding-top: 2rem;
+        }
+    }
+}
+
+@media screen and (max-height: 310px){
+    .root{
+        .cases{
+            padding-top: 4rem;
+        }
+    }
+}
+
+@media screen and (max-height: 237px){
+    .root{
+        .cases{
+            padding-top: 6rem;
+        }
+    }
+}
