--- a/src/Components/LongBtn/LongBtn.module.scss
+++ b/src/Components/LongBtn/LongBtn.module.scss
@@ -8,11 +8,11 @@
     background: none;
     padding: 15px 0;
     margin-left: 12.5%;
-    transform: translateY(7vh);
+    margin-top: 7vh;
     font-size: 20px;
     font-weight: 600;
+    transition: .3s;
     &:hover{
-        transition: .3s;
         background: #EC1C24;
         color: white;
     }
