--- a/src/Components/Burger/Burger.module.scss
+++ b/src/Components/Burger/Burger.module.scss
@@ -193,3 +193,18 @@
         }
     }
 }
+
+@media screen and (max-width: 410px){
+    .root{
+        .orderBtn{
+            width: 60%;
+        }
+    }
+}
+@media screen and (max-width: 330px){
+    .root{
+        .orderBtn{
+            width: 70%;
+        }
+    }
+}
