--- a/src/Components/Burger/Burger.module.scss
+++ b/src/Components/Burger/Burger.module.scss
@@ -9,7 +9,7 @@
     z-index: 100000;
     width: 100%;
     transition: 0.5s;
-    max-height: 100vh;
+    height: 100vh;
     padding-bottom: 10vh;
     .floatingNav{
         position: absolute;
