fixed hor-scrolling bugs

--- a/src/Components/Burger/Burger.module.scss
+++ b/src/Components/Burger/Burger.module.scss
@@ -198,8 +198,9 @@
 
 @media screen and (max-width: 410px){
     .root{
+        overflow-x: hidden !important;
         .orderBtn{
-            width: 60%;
+            width: 60% ;
         }
     }
 }
